Finish Chinese Traditional Localization in Login Window Bug Fixed:     * Change Password's JTextField to JPasswordField

--- a/src/main/resources/lang/BriefTalk_zh_TW.properties
+++ b/src/main/resources/lang/BriefTalk_zh_TW.properties
@@ -1,4 +1,4 @@
-loginwindow.login=Login
-loginwindow.password=Password
-loginwindow.server=Server
-loginwindow.username=Username
+loginwindow.login=\u767B\u5165
+loginwindow.password=\u5BC6\u78BC
+loginwindow.server=\u4F3A\u670D\u5668
+loginwindow.username=\u5E33\u865F
