Add Login Status Add warn message in LoginWindow Add limits to prevent serverip, username and password be empty Trying SwingWorker

--- a/src/main/resources/lang/BriefTalk.properties
+++ b/src/main/resources/lang/BriefTalk.properties
@@ -1,3 +1,8 @@
+loginstatus.login=Login to Server...
+loginstatus.connecting=Connect to Server...
+loginwindow.emptypassword=Password can't be empty.
+loginwindow.emptyusername=Username can't be empty.
+loginwindow.emptyserverip=Server IP can't be empty.
 loginwindow.login=Login
 loginwindow.password=Password
 loginwindow.server=Server
