--- a/src/main/resources/lang/BriefTalk_zh_TW.properties
+++ b/src/main/resources/lang/BriefTalk_zh_TW.properties
@@ -1,3 +1,8 @@
+loginstatus.login=\u767B\u5165\u4E2D
+loginstatus.connecting=\u9023\u7DDA\u81F3\u4F3A\u670D\u5668...
+loginwindow.emptypassword=\u8ACB\u8F38\u5165\u5BC6\u78BC
+loginwindow.emptyusername=\u8ACB\u8F38\u5165\u5E33\u865F
+loginwindow.emptyserverip=\u4F3A\u670D\u5668\u4F4D\u5740\u4E0D\u53EF\u70BA\u7A7A
 loginwindow.login=\u767B\u5165
 loginwindow.password=\u5BC6\u78BC
 loginwindow.server=\u4F3A\u670D\u5668
