Add MotionPanel Add an icon to LoginWindow

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -7,3 +7,5 @@ loginwindow.login=Login
 loginwindow.password=Password
 loginwindow.server=Server
 loginwindow.username=Username
+loginwindow.rememberpassword=Remember
+loginwindow.autologin=Autologin
