--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -7,3 +7,5 @@ loginwindow.login=\u767B\u5165
 loginwindow.password=\u5BC6\u78BC
 loginwindow.server=\u4F3A\u670D\u5668
 loginwindow.username=\u5E33\u865F
+loginwindow.rememberpassword=\u8A18\u61B6\u5BC6\u78BC
+loginwindow.autologin=\u81EA\u52D5\u767B\u5165
