Add a error dialog when login failed

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -1,5 +1,6 @@
 loginstatus.login=Login to Server...
 loginstatus.connecting=Connect to Server...
+loginstatus.errortitle=Error - TerseTalk
 loginwindow.emptypassword=Password can't be empty.
 loginwindow.emptyusername=Username can't be empty.
 loginwindow.emptyserverip=Server IP can't be empty.
@@ -9,3 +10,4 @@ loginwindow.server=Server
 loginwindow.username=Username
 loginwindow.rememberpassword=Remember
 loginwindow.autologin=Autologin
+okbutton=Confirm
