--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -1,5 +1,6 @@
-loginstatus.login=\u767B\u5165\u4E2D
+loginstatus.login=\u767B\u5165\u4E2D...
 loginstatus.connecting=\u9023\u7DDA\u81F3\u4F3A\u670D\u5668...
+loginstatus.errortitle=\u932F\u8AA4 - TerseTalk
 loginwindow.emptypassword=\u8ACB\u8F38\u5165\u5BC6\u78BC
 loginwindow.emptyusername=\u8ACB\u8F38\u5165\u5E33\u865F
 loginwindow.emptyserverip=\u4F3A\u670D\u5668\u4F4D\u5740\u4E0D\u53EF\u70BA\u7A7A
@@ -9,3 +10,4 @@ loginwindow.server=\u4F3A\u670D\u5668
 loginwindow.username=\u5E33\u865F
 loginwindow.rememberpassword=\u8A18\u61B6\u5BC6\u78BC
 loginwindow.autologin=\u81EA\u52D5\u767B\u5165
+okbutton=\u78BA\u5B9A
