Almost finished login window Change close and iconified image to 18*18 px Add MessageBox

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -1,6 +1,8 @@
 loginstatus.login=Login to Server...
 loginstatus.connecting=Connect to Server...
 loginstatus.errortitle=Error - TerseTalk
+loginstatus.connectionfailed=<html>Cannot connect to server.<br/>Please try again later.</html>
+loginstatus.loginfailed=Incorrect Username or password.
 loginwindow.emptypassword=Password can't be empty.
 loginwindow.emptyusername=Username can't be empty.
 loginwindow.emptyserverip=Server IP can't be empty.
