--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -1,6 +1,8 @@
 loginstatus.login=\u767B\u5165\u4E2D...
 loginstatus.connecting=\u9023\u7DDA\u81F3\u4F3A\u670D\u5668...
 loginstatus.errortitle=\u932F\u8AA4 - TerseTalk
+loginstatus.connectionfailed=<html>\u7121\u6CD5\u9023\u7DDA\u81F3\u4F3A\u670D\u5668<br/>\u8ACB\u7A0D\u5F8C\u518D\u8A66</html>
+loginstatus.loginfailed=\u4F7F\u7528\u8005\u5E33\u865F\u6216\u5BC6\u78BC\u932F\u8AA4
 loginwindow.emptypassword=\u8ACB\u8F38\u5165\u5BC6\u78BC
 loginwindow.emptyusername=\u8ACB\u8F38\u5165\u5E33\u865F
 loginwindow.emptyserverip=\u4F3A\u670D\u5668\u4F4D\u5740\u4E0D\u53EF\u70BA\u7A7A
