Add some packages to make it look clearer Add disable SSL certification option Add a Yes No MessageBox mode to MessageBox Add a WindowLocation structure to save windows's loacation Bugs Fixed:     * Make MessageBox's text be in center     * Change DialogTitleBar's close operation to dispose

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -1,15 +1,19 @@
-loginstatus.login=Login to Server...
-loginstatus.connecting=Connect to Server...
-loginstatus.errortitle=Error - TerseTalk
-loginstatus.connectionfailed=<html>Cannot connect to server.<br/>Please try again later.</html>
-loginstatus.loginfailed=Incorrect Username or password.
-loginwindow.emptypassword=Password can't be empty.
-loginwindow.emptyusername=Username can't be empty.
-loginwindow.emptyserverip=Server IP can't be empty.
-loginwindow.login=Login
-loginwindow.password=Password
-loginwindow.server=Server
-loginwindow.username=Username
-loginwindow.rememberpassword=Remember
-loginwindow.autologin=Autologin
-okbutton=Confirm
+LoginStatus.login=Login to Server...
+LoginStatus.connecting=Connect to Server...
+LoginStatus.errorTitle=Error - TerseTalk
+LoginStatus.warningTitle=Warning - TerseTalk
+LoginStatus.disableSSLCert=
+LoginStatus.connectionFailed=<html>Cannot connect to server.<br/>Please try again later.</html>
+LoginStatus.loginFailed=Incorrect Username or password.
+LoginWindow.emptyPassword=Password can't be empty.
+LoginWindow.emptyUsername=Username can't be empty.
+LoginWindow.emptyServerIP=Server IP can't be empty.
+LoginWindow.login=Login
+LoginWindow.password=Password
+LoginWindow.server=Server
+LoginWindow.username=Username
+LoginWindow.rememberPassword=Remember
+LoginWindow.autologin=Autologin
+okButton=Confirm
+yesButton=Yes
+noButton=No
