--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -1,15 +1,19 @@
-loginstatus.login=\u767B\u5165\u4E2D...
-loginstatus.connecting=\u9023\u7DDA\u81F3\u4F3A\u670D\u5668...
-loginstatus.errortitle=\u932F\u8AA4 - TerseTalk
-loginstatus.connectionfailed=<html>\u7121\u6CD5\u9023\u7DDA\u81F3\u4F3A\u670D\u5668<br/>\u8ACB\u7A0D\u5F8C\u518D\u8A66</html>
-loginstatus.loginfailed=\u4F7F\u7528\u8005\u5E33\u865F\u6216\u5BC6\u78BC\u932F\u8AA4
-loginwindow.emptypassword=\u8ACB\u8F38\u5165\u5BC6\u78BC
-loginwindow.emptyusername=\u8ACB\u8F38\u5165\u5E33\u865F
-loginwindow.emptyserverip=\u4F3A\u670D\u5668\u4F4D\u5740\u4E0D\u53EF\u70BA\u7A7A
-loginwindow.login=\u767B\u5165
-loginwindow.password=\u5BC6\u78BC
-loginwindow.server=\u4F3A\u670D\u5668
-loginwindow.username=\u5E33\u865F
-loginwindow.rememberpassword=\u8A18\u61B6\u5BC6\u78BC
-loginwindow.autologin=\u81EA\u52D5\u767B\u5165
-okbutton=\u78BA\u5B9A
+LoginStatus.login=\u767B\u5165\u4E2D...
+LoginStatus.connecting=\u9023\u7DDA\u81F3\u4F3A\u670D\u5668...
+LoginStatus.errorTitle=\u932F\u8AA4 - TerseTalk
+LoginStatus.warningTitle=\u8B66\u544A - TerseTalk
+LoginStatus.disableSSLCert=<html><center>\u4F3A\u670D\u5668\u7121\u6CD5\u901A\u904E\u5B89\u5168\u6027\u9A57\u8B49</center><center>\u662F\u5426\u7E7C\u7E8C\u9023\u7DDA?<center/><br/><center><font color = "red">\u6CE8\u610F\uFF1A\u9019\u4EE3\u8868\u60A8\u6709\u53EF\u80FD\u9023\u5230\u60E1\u610F\u4F3A\u670D\u5668</font color></center></html>
+LoginStatus.connectionFailed=<html><center>\u7121\u6CD5\u9023\u7DDA\u81F3\u4F3A\u670D\u5668</center><center>\u8ACB\u7A0D\u5F8C\u518D\u8A66<></html>
+LoginStatus.loginFailed=\u4F7F\u7528\u8005\u5E33\u865F\u6216\u5BC6\u78BC\u932F\u8AA4
+LoginWindow.emptyPassword=\u8ACB\u8F38\u5165\u5BC6\u78BC
+LoginWindow.emptyUsername=\u8ACB\u8F38\u5165\u5E33\u865F
+LoginWindow.emptyServerIP=\u4F3A\u670D\u5668\u4F4D\u5740\u4E0D\u53EF\u70BA\u7A7A
+LoginWindow.login=\u767B\u5165
+LoginWindow.password=\u5BC6\u78BC
+LoginWindow.server=\u4F3A\u670D\u5668
+LoginWindow.username=\u5E33\u865F
+LoginWindow.rememberPassword=\u8A18\u61B6\u5BC6\u78BC
+LoginWindow.autologin=\u81EA\u52D5\u767B\u5165
+okButton=\u78BA\u5B9A
+yesButton=\u662F
+noButton=\u5426
