Add MainWindow Add UserInfo structure to save user's information Add Database Control, but may not use Finished friends load status bar, but may not use

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -2,7 +2,7 @@ LoginStatus.login=Login to Server...
 LoginStatus.connecting=Connect to Server...
 LoginStatus.errorTitle=Error - TerseTalk
 LoginStatus.warningTitle=Warning - TerseTalk
-LoginStatus.disableSSLCert=
+LoginStatus.disableSSLCert=<html><center>SSL certification failed\!</center><center>Do you still want to connect?<center/><br/><center><font color \= "red">Warning\uFF1AThis represent that you may connect to a fake server.</font color></center></html>
 LoginStatus.connectionFailed=<html>Cannot connect to server.<br/>Please try again later.</html>
 LoginStatus.loginFailed=Incorrect Username or password.
 LoginWindow.emptyPassword=Password can't be empty.
@@ -17,3 +17,9 @@ LoginWindow.autologin=Autologin
 okButton=Confirm
 yesButton=Yes
 noButton=No
+FriendsListStatus.getFriendListStatus=Retreiving friends list...
+menu.help=Help
+menu.help.about=About
+menu.file=File
+menu.file.preference=Preference
+menu.file.exit=Exit
