--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -2,7 +2,7 @@ LoginStatus.login=\u767B\u5165\u4E2D...
 LoginStatus.connecting=\u9023\u7DDA\u81F3\u4F3A\u670D\u5668...
 LoginStatus.errorTitle=\u932F\u8AA4 - TerseTalk
 LoginStatus.warningTitle=\u8B66\u544A - TerseTalk
-LoginStatus.disableSSLCert=<html><center>\u4F3A\u670D\u5668\u7121\u6CD5\u901A\u904E\u5B89\u5168\u6027\u9A57\u8B49</center><center>\u662F\u5426\u7E7C\u7E8C\u9023\u7DDA?<center/><br/><center><font color = "red">\u6CE8\u610F\uFF1A\u9019\u4EE3\u8868\u60A8\u6709\u53EF\u80FD\u9023\u5230\u60E1\u610F\u4F3A\u670D\u5668</font color></center></html>
+LoginStatus.disableSSLCert=<html><center>\u4F3A\u670D\u5668\u7121\u6CD5\u901A\u904E\u5B89\u5168\u6027\u9A57\u8B49</center><center>\u662F\u5426\u7E7C\u7E8C\u9023\u7DDA?<center/><br/><center><font color \= "red">\u6CE8\u610F\uFF1A\u9019\u4EE3\u8868\u60A8\u6709\u53EF\u80FD\u9023\u5230\u60E1\u610F\u4F3A\u670D\u5668</font color></center></html>
 LoginStatus.connectionFailed=<html><center>\u7121\u6CD5\u9023\u7DDA\u81F3\u4F3A\u670D\u5668</center><center>\u8ACB\u7A0D\u5F8C\u518D\u8A66<></html>
 LoginStatus.loginFailed=\u4F7F\u7528\u8005\u5E33\u865F\u6216\u5BC6\u78BC\u932F\u8AA4
 LoginWindow.emptyPassword=\u8ACB\u8F38\u5165\u5BC6\u78BC
@@ -17,3 +17,9 @@ LoginWindow.autologin=\u81EA\u52D5\u767B\u5165
 okButton=\u78BA\u5B9A
 yesButton=\u662F
 noButton=\u5426
+FriendsListStatus.getFriendListStatus=\u6B63\u5728\u53D6\u5F97\u597D\u53CB\u5217\u8868...
+menu.help=\u8AAA\u660E
+menu.help.about=\u95DC\u65BC
+menu.file=\u6A94\u6848
+menu.file.preference=\u504F\u597D\u8A2D\u5B9A
+menu.file.exit=\u96E2\u958B
