Finish main window Create a chat window

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -23,3 +23,6 @@ menu.help.about=About
 menu.file=File
 menu.file.preference=Preference
 menu.file.exit=Exit
+online=Online
+offline=Offline
+ChatWindow.send=Send
