--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -23,3 +23,6 @@ menu.help.about=\u95DC\u65BC
 menu.file=\u6A94\u6848
 menu.file.preference=\u504F\u597D\u8A2D\u5B9A
 menu.file.exit=\u96E2\u958B
+online=\u4E0A\u7DDA
+offline=\u96E2\u7DDA
+ChatWindow.send=\u50B3\u9001
