Finished ChatWindow. Bug fixed:     * Now it can connect to Google Talk normally.

--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -26,3 +26,4 @@ menu.file.exit=\u96E2\u958B
 online=\u4E0A\u7DDA
 offline=\u96E2\u7DDA
 ChatWindow.send=\u50B3\u9001
+ChatWindow.typing=\ \u6B63\u5728\u8F38\u5165\u8A0A\u606F...
