Finish About Window Add source image file to git

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -27,3 +27,6 @@ online=Online
 offline=Offline
 ChatWindow.send=Send
 ChatWindow.typing=\ is typing...
+LoginStatus.connectionInterrupt=Connection failed. Please check you Internet connection.
+AboutWindow.author=Author\: Alec Su
+AboutWindow.version=Version\: 1.0 Snapshot
