--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -27,3 +27,6 @@ online=\u4E0A\u7DDA
 offline=\u96E2\u7DDA
 ChatWindow.send=\u50B3\u9001
 ChatWindow.typing=\ \u6B63\u5728\u8F38\u5165\u8A0A\u606F...
+LoginStatus.connectionInterrupt=\u9023\u7DDA\u5931\u6557\uFF0C\u8ACB\u6AA2\u5BDF\u60A8\u7684\u7DB2\u8DEF\u72C0\u614B
+AboutWindow.author=\u4F5C\u8005\uFF1AAlec Su
+AboutWindow.version=\u7248\u672C\uFF1A 1.0 Snapshot
