Strengthen connection stability

--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -30,3 +30,6 @@ ChatWindow.typing=\ \u6B63\u5728\u8F38\u5165\u8A0A\u606F...
 LoginStatus.connectionInterrupt=\u9023\u7DDA\u5931\u6557\uFF0C\u8ACB\u6AA2\u5BDF\u60A8\u7684\u7DB2\u8DEF\u72C0\u614B
 AboutWindow.author=\u4F5C\u8005\uFF1AAlec Su
 AboutWindow.version=\u7248\u672C\uFF1A 1.0 Snapshot
+ConnectionMessage.connectionFailed=<html><center>\u4F3A\u670D\u5668\u7121\u6CD5\u9023\u7DDA\uFF0C\u7121\u6CD5\u6B63\u5E38\u50B3\u9001\u8A0A\u606F</center><br/><center>\u91CD\u65B0\u9023\u7DDA\u4E2D</center></html>
+ConnectionMessage.messageTitle=\u8A0A\u606F - TerseTalk
+ConnectionMessage.reconnect=\u5DF2\u91CD\u65B0\u9023\u4E0A\u4F3A\u670D\u5668
