--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -30,3 +30,6 @@ ChatWindow.typing=\ is typing...
 LoginStatus.connectionInterrupt=Connection failed. Please check you Internet connection.
 AboutWindow.author=Author\: Alec Su
 AboutWindow.version=Version\: 1.0 Snapshot
+ConnectionMessage.connectionFailed=<html><center>Client is not login. Cannot send message.</center><br/><center>We are trying to login again</center></html>
+ConnectionMessage.messageTitle=Message - TerseTalk
+ConnectionMessage.reconnect=Reconnected to the server.
