Add part of autotalk

--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -34,3 +34,5 @@ ConnectionMessage.connectionFailed=<html><center>Client is not login. Cannot sen
 ConnectionMessage.messageTitle=Message - TerseTalk
 ConnectionMessage.reconnect=Reconnected to the server.
 menu.file.autoTalk=AutoTalk
+AutoTalkWindow.browse=Browse
+AutoTalkWindow.exit=Exit
