--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -34,3 +34,5 @@ ConnectionMessage.connectionFailed=<html><center>\u4F3A\u670D\u5668\u7121\u6CD5\
 ConnectionMessage.messageTitle=\u8A0A\u606F - TerseTalk
 ConnectionMessage.reconnect=\u5DF2\u91CD\u65B0\u9023\u4E0A\u4F3A\u670D\u5668
 menu.file.autoTalk=\u5DF2\u56DE\u4E0D\u8B80
+AutoTalkWindow.browse=\u700F\u89BD
+AutoTalkWindow.exit=\u96E2\u958B
