--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -29,10 +29,12 @@ ChatWindow.send=Send
 ChatWindow.typing=\ is typing...
 LoginStatus.connectionInterrupt=Connection failed. Please check you Internet connection.
 AboutWindow.author=Author\: Alec Su
-AboutWindow.version=Version\: 1.0 Snapshot
+AboutWindow.version=Version\: 1.01 Snapshot with AutoTalk
 ConnectionMessage.connectionFailed=<html><center>Client is not login. Cannot send message.</center><br/><center>We are trying to login again</center></html>
 ConnectionMessage.messageTitle=Message - TerseTalk
 ConnectionMessage.reconnect=Reconnected to the server.
 menu.file.autoTalk=AutoTalk
 AutoTalkWindow.browse=Browse
 AutoTalkWindow.exit=Exit
+AutoTalkWindow.start=Start
+AutoTalkWindow.stop=Stop
