Create a new branch special for OS X with Aqua Look and Feel

--- a/src/main/resources/lang/tTalk_zh_TW.properties
+++ b/src/main/resources/lang/tTalk_zh_TW.properties
@@ -33,3 +33,4 @@ AboutWindow.version=\u7248\u672C\uFF1A 1.01 Snapshot
 ConnectionMessage.connectionFailed=<html><center>\u4F3A\u670D\u5668\u7121\u6CD5\u9023\u7DDA\uFF0C\u7121\u6CD5\u6B63\u5E38\u50B3\u9001\u8A0A\u606F</center><br/><center>\u91CD\u65B0\u9023\u7DDA\u4E2D</center></html>
 ConnectionMessage.messageTitle=\u8A0A\u606F - TerseTalk
 ConnectionMessage.reconnect=\u5DF2\u91CD\u65B0\u9023\u4E0A\u4F3A\u670D\u5668
+aquaError=\u6B64\u7248\u672C\u50C5\u80FD\u5728OS X\u4E0A\u57F7\u884C
