--- a/src/main/resources/lang/tTalk.properties
+++ b/src/main/resources/lang/tTalk.properties
@@ -33,3 +33,4 @@ AboutWindow.version=Version\: 1.01 Snapshot
 ConnectionMessage.connectionFailed=<html><center>Client is not login. Cannot send message.</center><br/><center>We are trying to login again</center></html>
 ConnectionMessage.messageTitle=Message - TerseTalk
 ConnectionMessage.reconnect=Reconnected to the server.
+aquaError=This version can only be used in OS X.
